--- a/index.html
+++ b/index.html
@@ -1563,6 +1563,60 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br>
 
+<fieldset><details open><summary>MWR:</summary>
+
+<br>MWR Outdoor Recreation
+<br><a href="https://www.facebook.com/mwror" target="_blank">https://www.facebook.com/mwror</a>
+<br>
+
+<br>Buffalo Corral Riding Stables
+<br><a href="https://www.facebook.com/Buffalo-Corral-Riding-Stables" target="_blank">https://www.facebook.com/Buffalo-Corral-Riding-Stables</a>
+<br>
+<br><a href="tel:520-533-5220">520-533-5220</a>
+<br><a href="tel:520-220-0670">520-220-0670</a>
+<br>-Guided trail rides, Riding lessons,  Birthday parties, Group trail rides, Open riding, Holiday parties, Horse camps, Lead arounds, Horse boarding
+<br>
+<br><a href="" target="_blank"></a>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<br>
+<br><a href="" target="_blank"></a>
+<br>
+<br><a href="tel:520-533-">520-533-</a> - 
+<br>-
+<br>
+<br>
+<br><a href="" target="_blank"></a>
+<br>
+<br><a href="tel:520-533-">520-533-</a> - 
+<br>-
+<br>
+
+<br>
+<br><a href="" target="_blank"></a>
+<br>
+<br><a href="tel:520-533-">520-533-</a> - 
+<br>-
+<br>
+
+<br>
+<br><a href="" target="_blank"></a>
+<br>
+<br><a href="tel:520-533-">520-533-</a> - 
+<br>-
+<br>
+
+
+</details></fieldset><!-- MWR -->
+
+<br>
+
 <fieldset><details open><summary>Links:</summary>
 
 <br>ERB/SRB:
