--- a/index.html
+++ b/index.html
@@ -1588,7 +1588,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 <br>
 <br><a href="tel:520-533-6707">520-533-6707</a> - MWR Rents
-<br>-Rentals, Parks reservations, Garden canyon RV park
+<br>-Rentals, Parks reservations, Garden Canyon RV park
 <br>
 
 <br>
