--- a/index.html
+++ b/index.html
@@ -1579,7 +1579,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="tel:520-220-0670">520-220-0670</a>
 <br>-Guided trail rides, Riding lessons,  Birthday parties, Group trail rides, Open riding, Holiday parties, Horse camps, Lead arounds, Horse boarding
 <br>
-<br><a href="https://maps.google.com/maps?q=31.566515,-110.383163" target="_blank">Address</a>: BLDG 13555, Canelo Rd, Sierra Vista, AZ 85613
+<br><a href="https://maps.google.com/maps?q=31.566515,-110.383163" target="_blank">Address</a>: Canelo Rd BLDG 13555, Fort Huachuca, AZ 85613
 <br>
 <br>Hours of Operation:
 <br>0900-1600 - Th-Su
