--- a/index.html
+++ b/index.html
@@ -1110,6 +1110,7 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>
 
 <br><a href="tel:520-533-2997">520-533-2997</a><label> - COVID Hotline</label>
+<br><a href="tel:520-533-2997">520-255-6692</a>
 <br>
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
 <br><a href="tel:1-800-225-5779">1-800-CALL-SPY</a><label> - (Report suspicious activity)</label>
