--- a/index.html
+++ b/index.html
@@ -946,6 +946,8 @@ border: solid 2px;
 <p>Send your JSON file to: 
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">DS Hernandez</a>
   <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
+<br><br>**Encrypt your email before sending it**
+
 </p>
 <details><summary>iPhone users</summary>
   <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
