--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,8 @@ border: solid 2px;
 
 <br>
 <br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP" target="_blank">https://discord.gg/wTem24TpZP</a>
+<br><a href="https://discord.gg/TUhC7m4v" target="_blank">https://discord.gg/TUhC7m4v</a>
+
 <br>
 <br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing" target="_blank">CQ Roster</a>
 <br>
