--- a/index.html
+++ b/index.html
@@ -1107,7 +1107,34 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 
 
 <br>
-</details></fieldset>
+</details></fieldset><!-- Volunteer -->
+<br>
+
+<fieldset><details><summary>Leave/Holiday Block Leave</summary>
+
+<br>Track flights prices:
+<br><a href="https://www.google.com/flights" target="_blank">https://www.google.com/flights</a>
+<br>-You can use Google to track the flight price changes and decide when is a good /better time/date to buy them.
+<br>*You can use whatever method to buy them*
+<br><b>*You don't need to use Google to buy them*</b>
+<br>
+<br>How to:
+<br><a href="https://support.google.com/travel/answer/6235879" target="_blank">https://support.google.com/travel/answer/6235879</a>
+<br>
+<br>Check/Delete your travel alerts:
+<br><a href="https://www.google.com/travel/flights/saves" target="_blank">https://www.google.com/travel/flights/saves</a>
+
+<br>
+<br>Plane tickets:
+<br>Use your DoD ID as the known traveler number, it should get you TSA Pre, even on regular leave. 
+<br>It'll probably work for your spouse/dependents if they have a DoD ID as well.
+<br>
+<br>
+<br>Bus tickets can be bought at:
+<br><a href="https://huachucashuttle.com" target="_blank">https://huachucashuttle.com</a>
+
+<br>
+</details></fieldset><!-- Leave/HBL -->
 <br>
 
 <fieldset><details open><summary>Ft. Huachuca</summary>
