--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,15 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br><a href="https://www.instagram.com/rapid_bde" target="_blank">https://www.instagram.com/rapid_bde</a>
 <br>
 
+<br>
+<br><a href="https://play.google.com/store/apps/details?id=mil.army.wecarehuachuca" target="_blank">WeCare, Fort Huachuca - Android app</a>
+<br>
+<br><a href="https://apps.apple.com/us/app/id924626708" target="_blank">WeCare, Fort Huachuca - iPhone app</a>
+<br>
+
+
+
+
 <br><br>309th MI BN On-Call VA
 <br><a href="tel:520-255-5133">520-255-5133</a>
 <br><a href="tel:520-533-4748">520-533-4748</a>
