--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@ border: solid 2px;
 
 
 <fieldset><!--legend>Personal Datasheet</legend-->
-<details><summary>Personal Datasheet (New inbounds)</summary>
-
+<details><summary>Personal Datasheet (New inbounds)
+</summary>
+<br>Not mandatory, but highly appreciated
+<br><br>
   <fieldset><details open><summary>Service Member (SM) data:</summary>
     <fieldset><details><summary>PRIVACY ACT OF 1974 COMPLIANCE INFORMATION</summary>
     <p>The following information is provided in accordance with 5 U.S.C. 552a(e)(3) and applies to this form. Authority for collection of the information is 44 U.S.C. 2907, 3101, and 3103, and E.O. 9397 of November 22, 1943. Disclosure of the information is voluntary. The purpose of the information on this form is to assist your unit servicing the records. This form is then filed in the requested military service record as a record of disclosure. The form may also be disclosed to the Department of Defense components, the Department of Veterans Affairs, the Department of Transportation (Coast Guard), or the National Archives and Records Administration when the original custodian of the military health and personnel records transfers all or part of those records to that agency. If the service member was a member of the National Guard, the form may also be disclosed to the Adjutant General of the appropriate state, District of Colombia, or Puerto Rico, where he or she served. The following information will not be shared with any unauthorized personnel.</p>
