--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ border: solid 2px;
 <datalist id="DLI">
   <option value="Pass">
   <option value="Fail">
-  <option value="Not Attended">
+  <option value="No">
 </datalist>
 <datalist id="YN">
   <option value="Yes">
