--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,11 @@ Hold Co Moto: Nomads
 <fieldset><legend>Mail Address:</legend>
 RANK Last, First
 <br>HOLD CO, 111TH MI BDE
-<br>2520 HEALY AVE BLDG 84402
+<br>2520 HEALY AVE H111 HOLD CO
 <br>FORT HUACHUCA, AZ 85613
+<br><br>
+<br>Check valid address: <a href="https://tools.usps.com/go/ZipLookupAction_input" target="_blank">https://tools.usps.com/go/ZipLookupAction_input</a>
+
 </fieldset>
 <br>
 <fieldset><legend>Sick Call (SC):</legend>
