--- a/index.html
+++ b/index.html
@@ -1040,12 +1040,14 @@ RANK Last, First
 <br>
 <br>Street: 2520 HEALY AVE
 <br>APT: H111 HOLD CO
-<br><br>
-
-
+<br>
+<br>
 <br>Check valid address: <a href="https://tools.usps.com/go/ZipLookupAction_input" target="_blank">https://tools.usps.com/go/ZipLookupAction_input</a>
 
 </fieldset>
+
+
+
 <br>
 <fieldset><legend>Sick Call (SC):</legend>
 -Must have a new SC slip signed by DS
@@ -1060,10 +1062,22 @@ RANK Last, First
 -Must turn in to DS
 </fieldset>
 <br>
-<fieldset><legend>Bed check:</legend>
-2100 - Su-Th
-<br>2200 - Fr-Sa and Holidays
-<br>Uniform: Summer PTs with shower shoes, Phase badge, Room key, CAC, SHARP card, and dog tags.
+<fieldset><legend>Formation times:</legend>
+<br>Duty Week
+<br>0600 (PT), 1130 (Lunch), 1630 (CoB), 2100 (Bed Check)
+<br>
+<br>Friday: 1300 CoB (Released to Committee, must remain in uniform until 1630)
+<br>2200 Bed Check
+<br>
+<br>
+<br>Weekend/Holidays
+<br>0700 (Phase IV), 2000 (Recall), 2200 (Bed Check)
+<br>
+<br>Sunday or last weekend day
+<br>1900 (Recall), 2100 (Bed Check)
+<br>
+<br>
+<br>Bed Check Uniform: Summer PTs with shower shoes, Phase badge, Room key, CAC, SHARP card, and dog tags.
 </fieldset>
 <br>
 <fieldset><legend>Weinstein DFAC:</legend>
