--- a/index.html
+++ b/index.html
@@ -1026,6 +1026,10 @@ border: solid 2px;
 <fieldset><legend>Co Moto:</legend>
 Hold Co Moto: Nomads
 <br>Hold Co Response: Kill them all
+<br>
+<br>1st PLT: Nailed It!
+<br>3rd PLT: Diamond Hands!
+
 </fieldset>
 <br>
 <fieldset><legend>Mail Address:</legend>
