--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@ border: solid 2px;
 <button onclick="jsonFileDownload()">Download JSON</button>
 
 <br><br><label for="fileInput">Load JSON:</label>
-<input type="file" id="fileInput" multiple><button id="csvFileDownload" onclick="csvFileDownload()" hidden>Download CSV</button>
+<input type="file" id="fileInput" multiple><button id="csvFileDownload" onclick="csvFileDownload()" formtarget="_blank" hidden>Download CSV</button>
 <br><br>
 
 <p>Send your JSON file to: 
