--- a/index.html
+++ b/index.html
@@ -1721,7 +1721,8 @@ M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>Army Song: <a href="https://www.army.mil/values/song.html" target="_blank">https://www.army.mil/values/song.html</a>
 
 <br>
-<br>Army Publications - Latest official AR, FM, DA PAM, etc.
+<br>Army Publications
+<br>- Latest official AR, FM, DA PAM, etc.
 <br><a href="https://armypubs.army.mil/" target="_blank">https://armypubs.army.mil/</a>
 
 <br>
