--- a/index.html
+++ b/index.html
@@ -1049,9 +1049,6 @@ RANK Last, First
 <br>Check valid address: <a href="https://tools.usps.com/go/ZipLookupAction_input" target="_blank">https://tools.usps.com/go/ZipLookupAction_input</a>
 
 </fieldset>
-
-
-
 <br>
 <fieldset><legend>Sick Call (SC):</legend>
 -Must have a new SC slip signed by DS
@@ -1084,14 +1081,81 @@ RANK Last, First
 <br>Bed Check Uniform: Summer PTs with shower shoes, Phase badge, Room key, CAC, SHARP card, and dog tags.
 </fieldset>
 <br>
-<fieldset><legend>Weinstein DFAC:</legend>
+<fieldset><legend>Weinstein (AIT) DFAC:</legend>
 M-Sa: 0230-0400, 0600-0730, 1130-1300, 1700-1830
 <br>Su/Holidays: 0900-1230, 1630-1800
 <br></fieldset>
+<br>
+<fieldset><details open><summary>New inbounds - Week 0</summary>
+<br>Monday (or first day after a holiday/confirm with a DS)
+<br>0700-1130 @ Eifler Gym - Uniform: ACU (OCP)
+<br>Bring: In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
+<br>***Eat breakfast before you go there.
+<br>
+<br>S1
+<br>- Orders, DD1610
+<br>
+<br>Academics Records
+<br>- Orders, DD1610
+<br>
+<br>Dental
+<br>- Dental records
+<br>
+<br>Finance
+<br>- DA31
+<br>- Orders
+<br>- DD1610
+<br>
+<br>SHARP
+<br>BDE CDR/CSM
+<br>Chaplain
+<br>EO
+<br>IG
+<br>MISC
+<br>S2
+<br>ACS
+<br>NG/Reserve Liaison
+<br>Airborne/Ranger
+<br>
+<br>Clean the gym
+<br>-Sweep and wipe down everything that was touched (chairs, bleachers, tables)
+<br>
+<br>
+<br>1400-1600 - RAPIDS Escape room
+<br>(1345/1445 @ SHC Barracks Day room - 14x Soldiers max per session/van per hour)
+<br>
+<br>
+<br>Tuesday
+<br>0800-UTC - CIF
+<br>(0730 @ DFAC 309th side)
+<br>
+<br>1400-1600 - RAPIDS Escape room
+<br>(1345/1445 @ SHC Barracks Day room - 14x Soldiers max per session/van per hour)
+<br>
+<br>
+<br>Wednesday
+<br>0700-1630 - Financial Management Course @ SHC Barracks MPR
+<br>(0600 - Accountability Formation in OCPs, release to DFAC)
+<br>
+<br>
+<br>Thursday
+<br>0800-0930 - REACH Training @ SHC Barracks MPR (16x Soldiers max per session)
+<br>
+<br>0930-UTC - Safety/Accident Avoidance @ SHC Barracks MPR
+<br>
+<br>1400-1600 - MEO Training @ SHC Barracks MPR
+<br>
+<br>
+<br>Friday
+<br>0930-UTC - MI History Hunt @ MI Museum 
+<br>(0915 @ SHC Barracks Day room)
+
+<br>
+</details></fieldset><!-- Week 0 -->
 
 
 <br>
-</details></fieldset>
+</details></fieldset><!-- Hold Co info -->
 <br>
 
 <fieldset><details open><summary>PT</summary>
