--- a/index.html
+++ b/index.html
@@ -1578,7 +1578,15 @@ RANK Last, First
 <br>Financial Course: <a href="https://pfmc.snapinc.net" target="_blank">https://pfmc.snapinc.net</a>
 <br>U: PFMC
 <br>P: GoArmy!
-
+<br>
+<br>
+<br>Annual Credit Report
+<br><a href="https://www.annualcreditreport.com" target="_blank">https://www.annualcreditreport.com</a>
+<br>-Get your credit report free of charge
+<br>Note: it's only the report, NOT the credit score.
+<br>The website will ask for your PII in order to retrieve your report, that website is ok.
+<br>-If you want to know your score, usually you can get it through your bank.
+<br>
 </details>
 
 <br><br>ACS (Army Community Services):
