--- a/index.html
+++ b/index.html
@@ -1583,7 +1583,7 @@ RANK Last, First
 <br>Annual Credit Report
 <br><a href="https://www.annualcreditreport.com" target="_blank">https://www.annualcreditreport.com</a>
 <br>-Get your credit report free of charge
-<br>Note: it's only the report, NOT the credit score.
+<br>Note: it's only free for the report, NOT the credit score.
 <br>The website will ask for your PII in order to retrieve your report, that website is ok.
 <br>-If you want to know your score, usually you can get it through your bank.
 <br>
