--- a/index.html
+++ b/index.html
@@ -1635,8 +1635,17 @@ RANK Last, First
 <br>1000-1630 - Th
 <br>1200-1300 - Closed for lunch
 <br>
-<br><a href="https://maps.google.com/maps?q=31.555830,-110.361315" target="_blank">Address:</a> BLDG 50010 Smith Ave, Fort Huachuca, AZ 85613
+<br><a href="https://maps.google.com/maps?q=31.555830,-110.361315" target="_blank">Address:</a> 640 Smith Ave BLDG 50010, Fort Huachuca, AZ 85613
 <br>Website: <a href="https://www.armymwr.com/programs-and-services/personal-assistance/army-community-service" target="_blank">https://www.armymwr.com/programs-and-services/personal-assistance/army-community-service</a>
+<br>Facebook: <a href="https://facebook.com/FortHuachucaSFRC" target="_blank">https://facebook.com/FortHuachucaSFRC</a>
+<br><br>
+<br>Newcomer Orientation
+<br>-Last Tuesday of every month
+<br>-0800-1200 @ SFRC
+<br>-Presentations for individuals new to military life, and to become familiar with Fort Huachuca and surrounding communities
+<br>-Encouraged for family members
+<br>**Childcare not available
+<br>(this might change in a future, check the FB page for the most updated information)
 <br><br>
 
 <br><a href="tel:520-533-5312">520-533-5312</a> - Army Emergency Relief (AER)
