--- a/index.html
+++ b/index.html
@@ -1635,13 +1635,14 @@ RANK Last, First
 <br>1000-1630 - Th
 <br>1200-1300 - Closed for lunch
 <br>
-<br><a href="https://maps.google.com/maps?q=31.555830,-110.361315" target="_blank">Address:</a> 640 Smith Ave BLDG 50010, Fort Huachuca, AZ 85613
+<br><a href="https://maps.google.com/maps?q=31.555830,-110.361315" target="_blank">Address</a>/<a href="https://www.google.com/maps/dir/my+location/31.555830,-110.361315" target="_blank">Directions</a>: 640 Smith Ave BLDG 50010, Fort Huachuca, AZ 85613
 <br>Website: <a href="https://www.armymwr.com/programs-and-services/personal-assistance/army-community-service" target="_blank">https://www.armymwr.com/programs-and-services/personal-assistance/army-community-service</a>
 <br>Facebook: <a href="https://facebook.com/FortHuachucaSFRC" target="_blank">https://facebook.com/FortHuachucaSFRC</a>
 <br><br>
 <br>Newcomer Orientation
 <br>-Last Tuesday of every month
 <br>-0800-1200 @ SFRC
+<br>-Call to reserve a spot: <a href="tel:520-533-2330">520-533-2330</a>
 <br>-Presentations for individuals new to military life, and to become familiar with Fort Huachuca and surrounding communities
 <br>-Encouraged for family members
 <br>**Childcare not available
