--- a/index.html
+++ b/index.html
@@ -1245,8 +1245,9 @@ RANK Last, First
 <br><a href="https://www.facebook.com/groups/529117777235614" target="_blank">Fort Huachuca AIT Support Group</a>
 
 <br>
-<br><a href="https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA" target="_blank">FH Regulation 600-50</a>
-<br>If you can't find it there, let me know.
+<br><a href="https://drive.google.com/file/d/1_oMBOglspePR6XJ5SKqA86d-bIjLXnLL/view?usp=drivesdk" target="_blank">FH Regulation 600-50</a>
+<br>FH 600-50: <a href="https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA" target="_blank">https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA</a>
+<br>-Last time I check, the link above wasn't working.
 
 
 <br>
