--- a/index.html
+++ b/index.html
@@ -1765,7 +1765,8 @@ RANK Last, First
 
 <br>
 <br>Commissary coupons
-<br><a href="https://shop.commissaries.com/my-account#!/login" target="_blank">https://shop.commissaries.com/my-account#!/login</a>
+<br>Login: <a href="https://shop.commissaries.com/my-account#!/login" target="_blank">https://shop.commissaries.com/my-account#!/login</a>
+<br>Coupons: <a href="https://shop.commissaries.com/digital-coupons" target="_blank">https://shop.commissaries.com/digital-coupons</a>
 
 <br>
 <br>ERB/SRB:
