--- a/index.html
+++ b/index.html
@@ -1837,7 +1837,7 @@ RANK Last, First
 <br>ATCTS
 <br><a href="https://atc.us.army.mil/iastar/index.php" target="_blank">https://atc.us.army.mil/iastar/index.php</a>
 <br>
-<br><a href="https://drive.google.com/file/d/1L2KjHG7oy2zVgDKNHl7Pb-TSacXPyNIa/view?usp=sharing" target="_blank">--How to Upload the AUP and Cyber cert</a>
+<br>--<a href="https://drive.google.com/file/d/1L2KjHG7oy2zVgDKNHl7Pb-TSacXPyNIa/view?usp=sharing" target="_blank">How to Upload the AUP and Cyber cert</a>
 
 
 <br>
