--- a/index.html
+++ b/index.html
@@ -1017,8 +1017,9 @@ border: solid 2px;
 Hold Co Moto: Nomads
 <br>Hold Co Response: Kill them all
 <br>
-<br>1st PLT: Nailed It!
-<br>3rd PLT: Diamond Hands!
+<br>1st PLT (Berserker): Berserkers!
+<br>2nd PLT (Outriders): ... (might change by day)
+<br>3rd PLT (Ronins): Yellow pages!
 
 </fieldset>
 <br>
