--- a/index.html
+++ b/index.html
@@ -1240,6 +1240,7 @@ RANK Last, First
 
 <br><a href="https://www.facebook.com/FMWRFortHuachuca/" target="_blank">Fort Huachuca MWR - Facebook page</a>
 <br><a href="https://huachuca.armymwr.com/" target="_blank">Fort Huachuca MWR - Army page</a>
+<br><a href="https://www.sierravistaaz.gov/events" target="_blank">Sierra Vista events</a>
 <br>most activities on post are driven by MWR, if you want to known what activities might be happening in and around post, visit their page.
 <br>
 <br><a href="https://www.facebook.com/groups/529117777235614" target="_blank">Fort Huachuca AIT Support Group</a>
