--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,10 @@ border: solid 2px;
 <br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing" target="_blank">Hold Co SOP - Company</a>
 <br>
 
+<br><a href="https://drive.google.com/file/d/1GJBrekFzKXyVHpbb1welyjuHo1iK1eeS/view" target="_blank">BDE and Co In-Processing packet</a>
+<br>
+
+
 <br>
 <fieldset><legend>DS Office:</legend>
 -Knock on the door (or plastic piece near the door)  and announce:
