--- a/index.html
+++ b/index.html
@@ -1363,7 +1363,7 @@ RANK Last, First
 <br>
 <br>305th - CPT Uregan, Chris
 <br>309th - CPT Gaskin, Grant
-<br>BDE - MAJ Williams, Jameson
+<br>111th - MAJ Williams, Jameson
 <br>
 
 
