--- a/index.html
+++ b/index.html
@@ -1361,9 +1361,9 @@ RANK Last, First
 </summary>
 
 <br>
-<br>305th - CPT Uregan, Chris
-<br>309th - CPT Gaskin, Grant
-<br>111th - MAJ Williams, Jameson
+<br>305th BN - CPT Uregan, Chris
+<br>309th BN - CPT Gaskin, Grant
+<br>111th BDE - MAJ Williams, Jameson
 <br>
 
 
