--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@ RANK Last, First
 <br><a href="tel:520-538-1315">520-538-1315</a><label> - Substance Abuse (ASAP)</label>
 
 <br><br>
-<fieldset><details><summary>On-Call Chaplain (Confidential)
+<fieldset><details><summary>On-Call Chaplain (Confidential) - Click for more info (Services, hospitality house, etc)
 <br><a href="tel:520-508-8042">520-508-8042</a>
 </summary>
 
