--- a/index.html
+++ b/index.html
@@ -1234,7 +1234,8 @@ RANK Last, First
 <br><a href="tel:520-533-2997">520-255-6692</a>
 <br>
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
-<br><a href="tel:1-800-225-5779">1-800-CALL-SPY</a><label> - (Report suspicious activity)</label>
+<br><a href="tel:1-800-225-5779">1-800-CALL-SPY</a><label> - Report suspicious activity</label>
+<br>- or <a href="https://www.inscom.army.mil/isalute" target="_blank">https://www.inscom.army.mil/isalute</a>
 <br>-Threat Awareness and Reporting Program (TARP)
 <br>
 
