--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@ border: solid 2px;
 
 
 <br><br>
-<fieldset><details open><summary>Do's & Dont's</summary>
+<fieldset><details><summary>Do's & Dont's</summary>
 <fieldset><legend>Do's</legend>
 <ul>
     <li>You may go to the shoppette or order food after 1830 on duty days.</li>
@@ -1049,12 +1049,13 @@ RANK Last, First
 <br>-Must sign out in ‘Sick Call Roster’ (including battle buddy), not on CQ Sign out/in roster
 <br>-Must turn in SC slip to DS
 <br>-Illness: NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
-<br>-Injury:  NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
+<br>-Injury:  NLT 0420 @ CQ desk  |  NLT 0645 @ MISC (if it didn't happened within the last two days, you need to setup an Appointment)
 <br>-Setup Appointments: NLT 0700 @ MISC
 </fieldset>
 <br>
 <fieldset><legend>Appointments:</legend>
 -Must turn in to DS
+<br>-Your first dental appointment will be scheduled for you, if more than a month has happened since you went to BDE in-processing, let your DS know.
 </fieldset>
 <br>
 <fieldset><legend>Formation times:</legend>
