--- a/index.html
+++ b/index.html
@@ -1348,7 +1348,7 @@ RANK Last, First
 <br>
 
 <br>
-<br><a href="tel:1-866-495-6735">520-533-</a><label> - AZ Complete Health (24/7)</label>
+<br><a href="tel:1-866-495-6735">1-866-495-6735</a><label> - AZ Complete Health (24/7)</label>
 <br>TTY: <a href="sms:711">711</a>
 <br><a href="tel:1-866-780-9758">1-866-780-9758</a><label> - Alcoholic Anonymous</label>
 <br><a href="tel:520-459-0031">520-459-0031</a><label> - Alcoholic Anonymous Cochise County</label>
@@ -1356,8 +1356,9 @@ RANK Last, First
 <br><a href="tel:520-538-1315">520-538-1315</a><label> - Substance Abuse (ASAP)</label>
 
 <br><br>
-<fieldset><details><summary>On-Call Chaplain (Confidential) - Click for more info (Services, hospitality house, etc)
-<br><a href="tel:520-508-8042">520-508-8042</a>
+<fieldset><details><summary><a href="tel:520-508-8042">520-508-8042</a> - On-Call Chaplain (Confidential)
+<br>- Click for more info (Services, hospitality house, etc)
+<br>
 </summary>
 
 <br>
@@ -1368,7 +1369,8 @@ RANK Last, First
 
 
 <br>
-<br>Chapel Service
+<fieldset><details open><summary>Chapel Service:</summary>
+
 <br>Confessions: by Appointment 
 <br>
 <br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
@@ -1386,6 +1388,11 @@ RANK Last, First
 <br>1100 - Sunday - Main Post Chapel - Protestant Service
 <br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
 <br>
+</details></fieldset><!-- Chapel Services -->
+
+
+<br>
+<fieldset><details open><summary>Hospitality House:</summary>
 
 <br><a href="https://www.facebook.com/HuachucaHospitalityHouse" target="_blank">https://www.facebook.com/HuachucaHospitalityHouse</a>
 <br><a href="https://www.instagram.com/huachucahospitalityhouse" target="_blank">https://www.instagram.com/huachucahospitalityhouse</a>
@@ -1393,9 +1400,7 @@ RANK Last, First
 
 <br><a href="tel:757-620-4677">757-620-4677</a> - Jose (& Whitney) - Hospitality House
 <br>
-<br>
-
-
+</details></fieldset><!-- Hospitality House -->
 
 
 <br>
