--- a/index.html
+++ b/index.html
@@ -990,6 +990,8 @@ border: solid 2px;
 <br><a href="tel:520-533-0906">520-533-0906</a><label> - Co CQ Phone</label>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil" target="_blank">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 <br>
+<br><label>Co Gmail: </label><a href="mailto:shc111th@gmail.com" target="_blank">shc111th@gmail.com</a>
+<br>
 
 <br><a href="https://www.facebook.com/groups/479906796509454">Hold Co Facebook page</a>
 
