--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@ RANK Last, First
 <fieldset><details open><summary>Medical:</summary>
 <br>MISC (Military Intelligence Student Clinic): M-F 0430-1400
 <br><a href="tel:520-533-6709">520-533-6709</a>
-<br><a href="tel:520-533-5970">520-533-5970</a>
+<br><a href="tel:520-533-9946">520-533-9946</a>
 <br><a href="tel:520-538-0043">520-538-0043</a>
 <br>Location: <a href="https://maps.google.com/maps?q=31.564339,-110.341770" target="_blank">31.564339,-110.341770</a>
 
@@ -1512,9 +1512,6 @@ RANK Last, First
 <br><a href="https://apps.apple.com/us/app/id924626708" target="_blank">WeCare, Fort Huachuca - iPhone app</a>
 <br>
 
-
-
-
 <br><br>309th MI BN On-Call VA
 <br><a href="tel:520-255-5133">520-255-5133</a>
 <br><a href="tel:520-533-4748">520-533-4748</a>
@@ -1523,7 +1520,61 @@ RANK Last, First
 </details></fieldset><!-- SHARP -->
 
 <br>
+<fieldset><details open><summary>Suicide prevention:</summary>
 
+<br>
+<fieldset><legend>ACE:</legend>
+  <dl>
+    <dt>Ask</dt>
+    <dd>Ask anyone you think might be considering suicide.</dd>
+    <dt>Care</dt>
+    <dd>Care for them by being present and listening to their concerns.</dd>
+
+    <dt>Escort</dt>
+    <dd>Escort them to help if needed.</dd>
+  </dl>
+</fieldset>
+<br>
+<fieldset><legend>Yes or No questions:</legend>
+  <dl>
+    <dt>1. Have you wished you were dead or wished you could go to sleep and not wake up?</dt>
+    <dd>In the past month: Squad response</dd>
+    <dt>2. Have you actually had any thoughts about killing yourself?</dt>
+    <dd>In the past month: Squad response</dd>
+  </dl>
+  
+  <br>If <b>YES</b> to #2, ask questions 3, 4, 5, and 6
+  <br>If <b>NO</b> to #2, go directly to question 6
+  <br>
+  <dl>
+    <dt>3. Have you thought about how you might do this?</dt>
+    <dd>Elevate to leadership</dd>
+  </dl>
+</fieldset>
+<br>
+<br><a href="tel:520-533-5161">520-533-5161</a>
+<br>Behavioral Health (BH) clinic
+<br>-Walk-in, M-F: 0730-1530
+
+<br>
+<br><a href="https://www.tricare.mil/Plans/Eligibility/DEERS/RequiredDocuments">Required Documents to enroll dependents (spouse, child, fam. members, etc.) - Tricare</a>
+
+</details></fieldset><!-- Suicide prevention -->
+
+<br>
+<fieldset><details><summary>75th Ranger Regiment:</summary>
+
+<br><a href="tel:706-587-9440">706-587-9440</a> - Duty Cell
+<br><a href="mailto:75recruit.huachuca@socom.mil">75Recruit.Huachuca@Socom.mil</a>
+<br>
+<br><a href="https://www.75thRangerRegiment.org">https://www.75thRangerRegiment.org</a>
+<br>
+<br><a href="https://www.instagram.com/75th_recruit_huachuca" target="_blank">https://www.instagram.com/75th_recruit_huachuca</a>
+<br>
+
+</details></fieldset><!-- Ranger -->
+
+<br>
 <fieldset><details open><summary>Facilities:</summary>
 
 <br><details id="DEERS"><summary><a href="tel:520-533-1608">520-533-1608</a> - DEERS</summary>
