--- a/index.html
+++ b/index.html
@@ -1546,11 +1546,31 @@ RANK Last, First
   <br>If <b>YES</b> to #2, ask questions 3, 4, 5, and 6
   <br>If <b>NO</b> to #2, go directly to question 6
   <br>
+  
   <dl>
     <dt>3. Have you thought about how you might do this?</dt>
-    <dd>Elevate to leadership</dd>
+    <dd>In the past month: Elevate to leadership</dd>
+    <dt>4. Have you had any intention of acting on these thoughts of killing yourself, as opposed to you have the thoughts but definitely would not act on them?</dt>
+    <dd>In the past month: High Risk / Call 911</dd>
+    <dt>5. Have you started to work out or worked out the details of how to kill yourself?
+    <br>Do you intend to carry out this plan?</dt>
+    <dd>In the past month: High Risk / Call 911</dd>
+  </dl>
+  
+  <br><b>Always</b> ask question 6
+  <br>
+  
+  <dl>
+    <dt>6. Have you done anything, started to do anything, or prepared tondo anything to end your life?
+    <br>Examples:
+    <br>Collected pills, obtained a gun, gave away valuables, wrote a will or suicide note, held a gun but changed your mind, cut yourself, tried to hang yourself, etc.
+    </dt>
+    <dd>Lifetime: Elevate to leadership</dd>
+    <dd>In the past 3 months: High Risk / Call 911</dd>
   </dl>
 </fieldset>
+<br>
+<br><a href="tel:911">911</a>
 <br>
 <br><a href="tel:520-533-5161">520-533-5161</a>
 <br>Behavioral Health (BH) clinic
