--- a/index.html
+++ b/index.html
@@ -1568,6 +1568,12 @@ RANK Last, First
     <dd>Lifetime: Elevate to leadership</dd>
     <dd>In the past 3 months: High Risk / Call 911</dd>
   </dl>
+  
+  <br>Any <b>YES</b> indicates the need for further care and elevation to CoC (chain of command).
+  <br>However, if the answer to <b>4, 5, or 6</b> is <b>YES, immediately ESCORT</b> to the nearest Chaplain, mental health provider, Unit Leader, or Emergency Department.
+  
+  <br>
+  <br>Don't leave the person alone. <b>Stay with them</b> until they are in the care of professional help.
 </fieldset>
 <br>
 <br><a href="tel:911">911</a>
