--- a/index.html
+++ b/index.html
@@ -1582,6 +1582,13 @@ RANK Last, First
 <br>Behavioral Health (BH) clinic
 <br>-Walk-in, M-F: 0730-1530
 
+<br>
+<br><a href="tel:1-800-273-8255">1-800-273-TALK (8255)</a> - Suicide Prevention Lifeline
+<br><a href="https://www.suicidepreventionlifeline.org">https://www.suicidepreventionlifeline.org</a>
+<br>
+<br><a href="tel:1-800-273-8255">1-800-273-8255</a> - Veterans Crisis Line
+<br>
+
 </details></fieldset><!-- Suicide prevention -->
 
 <br>
