--- a/index.html
+++ b/index.html
@@ -1364,7 +1364,7 @@ RANK Last, First
 </summary>
 
 <br>
-<br>305th BN - CPT Uregan, Chris
+<br>305th MI BN - CPT Yeargin, Christopher J
 <br>309th BN - CPT Gaskin, Grant
 <br>111th BDE - MAJ Williams, Jameson
 <br>
