--- a/index.html
+++ b/index.html
@@ -948,6 +948,13 @@ border: solid 2px;
 <details><summary>iPhone users</summary>
   <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
 </details>
+<br>
+<details open><summary>Gmail users</summary>
+  <p>Before sending the email, go to the email options (three dots on Android) and choose 'Confidential mode'.
+  <br>Don't choose 1 day.
+  <br>1 week should be long enough.
+  <br>It'll create a temporary passcode protected link to your file (that will be automatically deleted after the link expires. Your file is most likely stored in your Drive or Gmail [ask Google!]).</p>
+</details>
 
 <!--br><br>
 <button onclick="academicQuota()">Academic Quota test</button-->
@@ -999,7 +1006,7 @@ border: solid 2px;
 <br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP" target="_blank">https://discord.gg/wTem24TpZP</a>
 
 <br>
-<br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing" target="_blank">CQ Roster</a>
+<br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing" target="_blank" hidden>CQ Roster</a>
 <br>
 <br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing" target="_blank">Hold Co SOP - Barracks</a>
 <br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing" target="_blank">Hold Co SOP - Company</a>
