--- a/index.html
+++ b/index.html
@@ -1123,18 +1123,21 @@ RANK Last, First
 <br>
 <br>Clean the gym
 <br>-Sweep and wipe down everything that was touched (chairs, bleachers, tables)
+<br><br>
+<br>0700-0900 - RAPIDS Escape room
+<br>(0645/0745 @ SHC Barracks Day room - 8x Soldiers max per session/van per hour)
 <br>
-<br>
-<br>1400-1600 - RAPIDS Escape room
-<br>(1345/1445 @ SHC Barracks Day room - 10x Soldiers max per session/van per hour)
+<br>1300-1400 - Co CDR & 1SG In-Brief
+<br>1400-1500 - H2F (Holistic Health and Fitness)
 <br>
 <br>
 <br>Tuesday
 <br>0800-UTC - CIF
 <br>(0730 @ DFAC 309th side)
 <br>
-<br>1400-1600 - RAPIDS Escape room
-<br>(1345/1445 @ SHC Barracks Day room - 10x Soldiers max per session/van per hour)
+<br>0700-0900 - RAPIDS Escape room
+<br>(0645/0745 @ SHC Barracks Day room - 8x Soldiers max per session/van per hour)
+<br>1300-1400 - H2F (Holistic Health and Fitness)
 <br>
 <br>
 <br>Wednesday
@@ -1147,6 +1150,7 @@ RANK Last, First
 <br>
 <br>0930-UTC - Safety/Accident Avoidance @ SHC Barracks MPR
 <br>
+<br>1300-1400 - H2F (Holistic Health and Fitness)
 <br>1400-1600 - MEO Training @ SHC Barracks MPR
 <br>
 <br>
@@ -1178,7 +1182,7 @@ RANK Last, First
 </details></fieldset>
 <br>
 
-<fieldset><details open><summary>Volunteer:</summary>
+<fieldset><details><summary>Volunteer:</summary>
 
 <br><a href="https://vmis.armyfamilywebportal.com" target="_blank">https://vmis.armyfamilywebportal.com</a>
 <br>-Register
