--- a/index.html
+++ b/index.html
@@ -1026,8 +1026,8 @@ border: solid 2px;
 </fieldset>
 <br>
 <fieldset><legend>Co Moto:</legend>
-Hold Co Moto: Nomads
-<br>Hold Co Response: Kill them all
+Hold Co Moto: Ready and Forward
+<br>Hold Co Response: Always
 <br>
 <br>1st PLT (Berserker): Berserkers!
 <br>2nd PLT (Outriders): ... (might change by day)
