--- a/index.html
+++ b/index.html
@@ -1029,9 +1029,9 @@ border: solid 2px;
 Hold Co Moto: Ready and Forward
 <br>Hold Co Response: Always
 <br>
-<br>1st PLT (Berserker): Berserkers!
-<br>2nd PLT (Outriders): ... (might change by day)
-<br>3rd PLT (Ronins): Yellow pages!
+<br>1st PLT (Ronins): Yellow pages!
+<br>2nd PLT (Berserker): Berserkers!
+<br>3rd PLT (Outriders): ... (might change by day)
 
 </fieldset>
 <br>
