--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ Hold Co Moto: Ready and Forward
 <br>Hold Co Response: Always
 <br>
 <br>1st PLT (Ronins): Yellow pages!
-<br>2nd PLT (Berserker): Berserkers!
+<br>2nd PLT (Berserkers): Berserkers!
 <br>3rd PLT (Outriders): ... (might change by day)
 
 </fieldset>
