--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ border: solid 2px;
 
 
 
-<fieldset hidden><!--legend>Personal Datasheet</legend-->
+<fieldset><!--legend>Personal Datasheet</legend-->
 <details><summary>Personal Datasheet (New inbounds)
 </summary>
 <br>Not mandatory, but highly appreciated
