--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ border: solid 2px;
 <br><br>
 
 <p>Send your JSON file to: 
-  <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">DS Hernandez</a>
+  <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">Co Gmail</a>
   <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
 <br><br>**Encrypt your email before sending it**
 
@@ -2034,7 +2034,7 @@ function emailSend() {
     var body = "DS,\r\n\r\nAttached is my personal datasheet.\r\n\r\nVery respectfully,\r\n" + document.getElementById("smRank").value + " " + document.getElementById("smNameLast").value;
     //body += "<" + window.location.href + ">";
     //var uri = "mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil?subject=";
-    var uri = "mailto:jorge.hernandezgarcia.mil@mail.mil?subject=";
+    var uri = "mailto:shc111th@gmail.com?subject=";
     uri += encodeURIComponent(subject);
     uri += "&body=";
     uri += encodeURIComponent(body);
