--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ border: solid 2px;
 <fieldset><!--legend>Personal Datasheet</legend-->
 <details open><summary>Personal Datasheet (New inbounds)
 </summary>
-<br>Not mandatory, but highly appreciated
+<br><p hidden>Not mandatory, but highly appreciated</p>
 <br><br>
   <fieldset><details open><summary>Service Member (SM) data:</summary>
     <fieldset><details><summary>PRIVACY ACT OF 1974 COMPLIANCE INFORMATION</summary>
