--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ border: solid 2px;
   <option value="35G">
   <option value="35L">
   <option value="35M">
+  <option value="35T">
   <option value="09L">
 </datalist>
 <datalist id="ABNRASP">
