--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@ border: solid 2px;
     <input type="number" id="smDODID" min=1000000000>
     </summary>
     <p>Look behind your Common Access Card (CAC), it's in the middle and above the bar code. It's 10 digits in length, and usually starts with 15.</p>
+    <p>You can also look in your dogtags.</p>
   </details>
   
   <label for="smGender">Gender:</label>
