--- a/index.html
+++ b/index.html
@@ -916,6 +916,9 @@ border: solid 2px;
       <details><summary>DA4187 - Personnel Action - (If you were promoted in BCT)</summary>
         <p>Look in the top center or the bottom left of your documents. It should say, Promoted or Advanced to whatever rank you have now.</p>
       </details>
+      <details><summary>Medical Records</summary>
+        <p>Usually a colorful folder with your dental or medical records.</p>
+      </details>
     </fieldset>
     <br>
     <fieldset><legend>Contraband:</legend>
