--- a/index.html
+++ b/index.html
@@ -956,6 +956,8 @@ border: solid 2px;
 
 <p>Send your JSON file to: 
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">SHC Gmail</a>
+  <br><label>SHC Gmail: </label><a href="mailto:shc111th@gmail.com" target="_blank">shc111th@gmail.com</a>
+<br>
   <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
 <br><br>**Encrypt your email before sending it**
 
