--- a/index.html
+++ b/index.html
@@ -2172,7 +2172,7 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
   var bde = "111th";
   var bn = "";
   var co = "";
-  var plt = "3rd";
+  var plt = "1st";
   if (mos != undefined && mos != null && mos != "") {
     switch(mos) {
         case "35G":
