--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ border: solid 2px;
 <datalist id="COVIDVacManu">
   <option value="Moderna">
   <option value="Pfizer">
-  <option value="Johnson and Johnson">
+  <option value="Johnson & Johnson">
 </datalist>
 <datalist id="Religion">
   <option value="None">
