--- a/index.html
+++ b/index.html
@@ -2164,6 +2164,53 @@ function csvFileLoadWait(file, tgt, csvSM, csvFam, csvVeh, callback) {
   }
 }
 
+function csvGenerateVeh(data, header = false, sepField = ",", sepRow = "\r\n") {
+  //var j = JSON.parse(jsonGenerate());
+  var j = JSON.parse(data);
+  
+  //data_Vehicle
+  //var orderDB = ["ID", 	"Student_ID", 	"Type", 	"Make", 	"Model", 	"Year", 	"Color", 	"Plate", 	"State", 	"Registration_exp_Date", 	"Insurance_exp_Date", 	"Insurance_Co", 	"VIN", 	"Notes", 	"timestamp"];
+
+  var orderJSON = ["ID", 	"Student_ID", 	"Type", 	"Make", 	"Model", 	"Year", 	"Color", 	"Plate", 	"State", 	"Registration_exp_Date", 	"Insurance_exp_Date", 	"Insurance_Co", 	"VIN", 	"Notes", 	"timestamp"];
+
+  var str = "", hdr = "";
+  
+  orderJSON.forEach(function (property) {
+    //console.log(`${property}: ${object[property]}`);
+    hdr += csvTextReplace(property) + sepField;
+    str += csvTextReplace(j[property]) + sepField;
+  })
+  hdr = hdr.slice(0,-sepField.length);
+  str = str.slice(0,-sepField.length);
+  if (header) {str = hdr + sepRow + str};
+  //alert(str);
+  return str + sepRow;
+}
+
+
+function csvGenerateFam(data, header = false, sepField = ",", sepRow = "\r\n") {
+  //var j = JSON.parse(jsonGenerate());
+  var j = JSON.parse(data);
+  
+  //data_Family
+  //var orderDB = ["ID", 	"Student_ID", 	"FRG", 	"NoK", 	"Relationship", 	"Last Name", 	"First Name", 	"Middle Name", 	"Gender", 	"DoB", 	"Phone", 	"Email", 	"Address", 	"City", 	"State", 	"Zip", 	"lat", 	"lon", 	"Notes", 	"timestamp"];
+
+  var orderJSON = ["ID", 	"Student_ID", 	"FRG", 	"NoK", 	"Relationship", 	"Last Name", 	"First Name", 	"Middle Name", 	"Gender", 	"DoB", 	"Phone", 	"Email", 	"Address", 	"City", 	"State", 	"Zip", 	"lat", 	"lon", 	"Notes", 	"timestamp"];
+
+  var str = "", hdr = "";
+  
+  orderJSON.forEach(function (property) {
+    //console.log(`${property}: ${object[property]}`);
+    hdr += csvTextReplace(property) + sepField;
+    str += csvTextReplace(j[property]) + sepField;
+  })
+  hdr = hdr.slice(0,-sepField.length);
+  str = str.slice(0,-sepField.length);
+  if (header) {str = hdr + sepRow + str};
+  //alert(str);
+  return str + sepRow;
+}
+
 function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n") {
   //var j = JSON.parse(jsonGenerate());
   var j = JSON.parse(data);
@@ -2175,13 +2222,13 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
   var plt = "1st";
   if (mos != undefined && mos != null && mos != "") {
     switch(mos) {
-        case "35G":
-            bn = "309th";
-            co = "A";
-            break;
         case "35F":
             bn = "305th";
             co = "C"; //"B";
+            break;
+        case "35G":
+            bn = "309th";
+            co = "A";
             break;
         case "09L":
         case "35L":
@@ -2302,12 +2349,6 @@ function csvGenerateStudent(data, header = false, sepField = ",", sepRow = "\r\n
     //var orderDB = ["ID", 	"Last Name", 	"First Name", 	"Middle Name", 	"Rank", 	"Promotable", 	"Gender", 	"Student SSN", 	"DOD ID#", 	"MOS", 	"MOS_Prev", 	"Marital Status", 	"Category", 	"BadgeID", 	"Phase Level", 	"Phase Date", 	"Shift", 	"Building #", 	"Room #", 	"Component", 	"State_NG_AR", 	"BDE", 	"BN", 	"CO", 	"Platoon", 	"Squad", 	"Leadership Position", 	"Unit_Prev", 	"Mobile Phone", 	"E-mail Address", 	"Arrival Date", 	"Date of Birth", 	"Date of Anniversary", 	"Date of Rank", 	"BASD", 	"PEBD", 	"ETS Date", 	"Class Graduation Date", 	"Class #", 	"Academic Probation", 	"Recycle", 	"ASVAB_GT", 	"DLI", 	"DLAB_Score", 	"DLPT_Read", 	"DLPT_Listen", 	"DLPT_Speak", 	"Language", 	"ABN", 	          "Ranger", 	"Clearance_lvl", 	"Inv_Type", 	"Inv_Date", 	"Duty_Status", 	"Citizenship", 	"Meal Preference", 	"Religion", 	    "Race", 	"Ethnicity", 	"Color_Hair", 	"Color_Eye", 	      "Height", 	"Weight", 	"Blood_Type", 	"Allergies", 	"Medical_Tag", 	"HeatCat", 	"ColdCat", 	"COVID_Vac_Dose1", 	"COVID_Vac_Dose2", 	"COVID_Vac_Dose3", 	"COVID_Vac_Manu", 	      "COVID_Vac_Vol", 	        "SASH", 	"TAPS", 	"CIF", 	"DX", 	"DX_Items", 	"Student Account", 	"Remedial PT", 	"Recovery_PT", 	"EFMP", 	"Req Fam Care Plan", 	"brief_IP_BDE", 	"brief_IP_CO", 	"brief_REACH", 	"brief_RAPIDS", 	"brief_Finance", 	"brief_Safety", 	"brief_EO", 	"brief_ABN", 	"brief_RASP", 	"brief_MI_History", 	"biref_H2F", 	"brief_AWC", 	"Active_Student", 	"Notes", 	"timestamp"];
   var orderJSON = ["ID", 	"smNameLast", 	"smNameFirst", 	"smNameMiddle", "smRank", 	"smPromotable", 	"smGender", 	"smSSN", 	"smDODID", 	"smMOS", "smMOSPrev", 	"smMarital", 		"smCategory", 	"smBadgeSN", 	"smPhaseLvl", 	"Phase_Date", 	"smShift", 	"smBuilding", 	"smRoom", 	"smComponent", 	"smNGARState", 	"smBDE", 	"smBN", 	"smCO", 	"smPLT", 	"Squad", 	"Leadership_Position", 	"smUnitPrev", 	"smPhone", 			"smEmail", 			"smDateArrival", 	"smDateDOB", 		"smDateMarried", 		"smDateDOR", 		"smDateBASD", 	"smDatePEBD", 	"smDateETS", 	"Class_Graduation_Date", 	"Class_num", 	"Academic_Probation", 	"Recycle", 	"smGT", 	"smDLI",	"smDLAB", 	"smDLPTr", 	"smDLPTl", 	"smDLPTs", 	"smDLPTLanguage", 	"smAirborne", 	"smRanger", 	"Clearance_lvl", 	"Inv_Type", 	"Inv_Date", 	"smDutyStatus", 	"smCitizenship", 	"smMealPref", 	"smReligion", 	"smRace", 	"smEthnicity", 	"smColorHair", 	"smColorEye", 	"smHeight", 	"smWeight", 	"smBlood", 	"smAllergy", 	"smMedTag", 	"smHeatCat", 	"smColdCat", 	"smCOVIDVacDose1",  	"smCOVIDVacDose2",  	"smCOVIDVacDose3",  	"smCOVIDVacManu",  	"smCOVIDVacVolunteer",  "SASH", 	"TAPS", 	"CIF", 	"DX", 	"smDXItems", 	"Student_Account", 	"Remedial_PT", 	"Recovery_PT", 	"smEFMP", 	"smFamCarePlan", 	"brief_IP_BDE", 	"brief_IP_CO", 	"brief_REACH", 	"brief_RAPIDS", 	"brief_Finance", 	"brief_Safety", 	"brief_EO", 	"brief_ABN", 	"brief_RASP", 	"brief_MI_History", 	"biref_H2F", 	"brief_AWC", 	"Active_Student", 	"Notes", 	"timestamp" ];
   
-  //data_Family
-  //var orderDB = ["ID", 	"Student_ID", 	"FRG", 	"NoK", 	"Relationship", 	"Last Name", 	"First Name", 	"Middle Name", 	"Gender", 	"DoB", 	"Phone", 	"Email", 	"Address", 	"City", 	"State", 	"Zip", 	"lat", 	"lon", 	"Notes", 	"timestamp"]
-
-  //data_Vehicle
-  //var orderDB = ["ID", 	"Student_ID", 	"Type", 	"Make", 	"Model", 	"Year", 	"Color", 	"Plate", 	"State", 	"Registration_exp_Date", 	"Insurance_exp_Date", 	"Insurance_Co", 	"VIN", 	"Notes", 	"timestamp"]
-
   
   var str = "", hdr = "";
   
