--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ border: solid 2px;
 
 
 <fieldset><!--legend>Personal Datasheet</legend-->
-<details open><summary>Personal Datasheet (New inbounds)
+<details><summary>Personal Datasheet (New inbounds)
 </summary>
 <br><p hidden>Not mandatory, but highly appreciated</p>
 <br><br>
